Added check to redefine function to make sure that the text boxes for up/down numbers in range of data had a numerical value for being computed. This was causing a NaN error when they were not being displayed, as in using a feature sequence

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -117,8 +117,10 @@ function make_focus() {
 }
 
 function redefine(){
+  if(! isNaN($('#addup').val())) {
   var up = $('#upstream').val()*1-$('#addup').val()*1;
   var down = $('#downstream').val()*1+$('#adddown').val()*1;
+  }
   $('#upstream').val(up);
   $('#downstream').val(down);
   myObj.start=$('#upstream').val();
