added HSP color description

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -857,7 +857,7 @@ function update_colors(hsp_num) {
   </table>
 <td width="3" bgcolor="#99FF99">
   <td class = "small">
-
+   Change HSP colors <span class=small>(red, green, blue values between 0-255)</span>
    <DIV id="hsp_colors"><TMPL_VAR NAME="HSP_COLOR"></DIV>
 
   </table>
