added link to GEvo menus

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -119,9 +119,13 @@ function animate_section(name, style, speedy, show) {
 	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
 	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>
 	  <li><a href="/CoGe/GeLo.pl" target="_self">GeLoView</a></li>
-<!--	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
--->
+	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
       </ul>
+	</li>
+	<li>Data
+	 <ul>
+	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
+	 </ul>
 	</li>
 	<li>User Stuff
 	 <ul>
