updated menu bar

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -122,16 +122,13 @@ function animate_section(name, style, speedy, show) {
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
       </ul>
 	</li>
-	<li>Data
-	 <ul>
-	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
-	 </ul>
-	</li>
 	<li>User Stuff
-	 <ul>
-	  <li><a href="#" target="_self">My Page</a></li>
+	 <ul>	   
+	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
+
+<!--	  <li><a href="#" target="_self">My Page</a></li>
 	  <li><a href="#" target="_self">Contacts</a></li>
-	  <li><a href="#" target="_self">Saved Results</a></li>
+	  <li><a href="#" target="_self">Saved Results</a></li>-->
 	 </ul>
 	</li>
 	<li>Preferences
@@ -150,7 +147,8 @@ function animate_section(name, style, speedy, show) {
 	 <ul>
 	      <li><a href="./docs/help/<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
 	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
-	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact Us</a></li>
+	      <li><a href="/CoGe/docs/help/CoGe/docs/help/Tutorials/Tutorials.html" target="_blank">Tutorials</a></li>
+	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact or Site Us</a></li>
 	</ul>
 	</li>
 	</ul>
