moved OpenLayers.js locally

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -31,7 +31,7 @@
              color:green;
         }
     </style>
-    <script src="http://openlayers.org/api/2.4/OpenLayers.js"></script>
+    <script src="js/OpenLayers.js"></script>
     <script src="js/Grid1D.js"></script>
     <script src="js/Genomic.js"></script>
     <script src="js/opengenes.js"></script>
